ajout gestion de command et gouvernance
